# ohao_engine

./: .gitignore  .mcp.json.disabled  CHANGELOG.md  CMakeLists.txt  EDITOR_INTEGRATION_STATUS.md  LICENSE  README.md  STATUS.md  STRATEGY.md  check_ai_detection.py  plan.md
examples/: CMakeLists.txt  cornell_box.cpp  env_demo.cpp  example_cli.hpp  interactive.cpp  inverse_fit.cpp  model_viewer.cpp  turntable.cpp
ohao/audio/: CMakeLists.txt  audio_module.hpp  audio_system.cpp  audio_system.hpp
ohao/core/: CMakeLists.txt  command.cpp  command.hpp  common_types.hpp  concepts.hpp  console_widget.cpp  console_widget.hpp  core.hpp  event_bus.cpp  event_bus.hpp  result.hpp
ohao/gpu/vulkan/: CMakeLists.txt  bindless_texture_manager.cpp  bindless_texture_manager.hpp  buffer_setup.cpp  device_setup.cpp  framebuffer.cpp  gpu_allocator.cpp  gpu_allocator.hpp  light_upload.cpp  material.cpp  material.hpp  material_instance.cpp  material_instance.hpp  offscreen_buffers.cpp  offscreen_light_upload.cpp  offscreen_pipeline.cpp  offscreen_render_modes.cpp  offscreen_renderer.cpp  offscreen_renderer.hpp  offscreen_rt_build.cpp  offscreen_scene_render.cpp  offscreen_vulkan_setup.cpp  pipeline.cpp  render_dispatch.cpp  renderer.cpp  renderer.hpp  renderer_impl.hpp  rt_build.cpp  scene_upload.cpp  vk_utils.hpp
ohao/physics/: CMakeLists.txt  physics_module.hpp
ohao/physics/backend/: backend_factory.cpp  physics_backend.hpp
ohao/physics/common/: physics_constants.cpp  physics_constants.hpp
ohao/physics/components/: physics_component.cpp  physics_component.hpp
ohao/physics/debug/: force_debugger.cpp  force_debugger.hpp
ohao/physics/dynamics/: rigid_body.cpp  rigid_body.hpp
ohao/physics/examples/: force_system_example.hpp
ohao/physics/forces/: environmental_force.hpp  field_force.cpp  field_force.hpp  force_generator.cpp  force_generator.hpp  force_presets.cpp  force_registry.cpp  force_registry.hpp  force_volume.hpp  forces.hpp  gravity_force.cpp  gravity_force.hpp  spring_force.cpp
ohao/physics/material/: physics_material.cpp  physics_material.hpp
ohao/physics/utils/: physics_math.hpp
ohao/physics/world/: physics_settings.hpp  physics_world.cpp  physics_world.hpp  profile_manager.cpp  profile_manager.hpp  simulation_profile.cpp  simulation_profile.hpp
ohao/render/: CMakeLists.txt  culling.hpp  render_module.hpp
ohao/render/async/: async_compute_queue.cpp  async_compute_queue.hpp
ohao/render/camera/: camera.hpp  scene_framer.cpp  scene_framer.hpp
ohao/render/components/: material_component.cpp  material_component.hpp  mesh_component.cpp
ohao/render/deferred/: bloom_pass.hpp  csm_pass.cpp  csm_pass.hpp  deferred_lighting_pass.cpp  deferred_lighting_pass.hpp  deferred_renderer.cpp  deferred_renderer.hpp  gbuffer_pass.cpp  gbuffer_pass.hpp  gizmo_pass.cpp  gizmo_pass.hpp  post_processing_pipeline.cpp  post_processing_pipeline.hpp  render_pass_base.cpp  render_pass_base.hpp  sky_pass.cpp  sky_pass.hpp  ssao_pass.cpp  ssao_pass.hpp  ssr_pass.cpp  ssr_pass.hpp  sss_pass.cpp  sss_pass.hpp  taa_pass.cpp  taa_pass.hpp
ohao/render/diff/: diff_camera.hpp  diff_forward.hpp  diff_map.hpp  diff_map_bind.hpp  diff_module.hpp  diff_optimizer.hpp  diff_pipeline.cpp  diff_pipeline.hpp  diff_session.hpp  diff_types.hpp  diff_vk_forward.hpp
ohao/render/frame/: frame_resources.hpp
ohao/render/gizmo/: gizmo_meshes.cpp  gizmo_meshes.hpp
ohao/render/graph/: render_graph.cpp  render_graph.hpp  render_pass.hpp  resource_handle.hpp
ohao/render/ibl/: ibl_processor.cpp  ibl_processor.hpp
ohao/render/material/: bindless_texture_manager.cpp  bindless_texture_manager.hpp
ohao/render/offscreen/: offscreen_buffers.cpp  offscreen_renderer.cpp  offscreen_renderer.hpp  offscreen_scene_render.cpp
ohao/render/particles/: particle_system.cpp  particle_system.hpp
ohao/render/passes/: bloom_pass.cpp  bloom_pass.hpp  deferred_lighting_pass.cpp  deferred_renderer.cpp  gbuffer_pass.hpp  gizmo_pass.hpp  sky_pass.hpp  ssao_pass.cpp
ohao/render/picking/: picking_system.cpp  picking_system.hpp  ray.hpp
ohao/render/rt/: animated_rt_manager.cpp  animated_rt_manager.hpp  denoiser.hpp  env_cdf.cpp  env_cdf.hpp  (+29 more)
ohao/scene/: CMakeLists.txt  default_scene_factory.cpp  default_scene_factory.hpp  scene.cpp  scene.hpp  scene_module.hpp  scene_object.cpp  scene_object.hpp  scene_serializer.cpp  transform.cpp  transform.hpp
src/: CMakeLists.txt  main.cpp
src/animation/: CMakeLists.txt  animation_clip.cpp  animation_clip.hpp  animation_component.cpp  animation_component.hpp  animation_controller.cpp  animation_controller.hpp  ragdoll.cpp  ragdoll.hpp  skeleton.cpp  skeleton.hpp
src/audio/: CMakeLists.txt  audio_system.cpp  audio_system.hpp
src/core/: CMakeLists.txt  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  material.hpp  model.hpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/engine/: CMakeLists.txt
src/physics/: CMakeLists.txt
src/renderer/: CMakeLists.txt  culling.hpp  vk_context.hpp  vulkan_context.cpp  vulkan_context.hpp
src/tests/: CMakeLists.txt  actor_component_test.cpp  multi_object_demo.cpp  physics_test.cpp  scene_serialization_test.cpp  serialization_minimal_test.cpp  serialization_simple_test.cpp
src/ui/: CMakeLists.txt
src/utils/: CMakeLists.txt  common_types.hpp
tests/: CMakeLists.txt  engine_tests.cpp
tests/audio/: CMakeLists.txt  audio_system_tests.cpp
tests/engine/: CMakeLists.txt  engine_tests.cpp
tests/force_generators/: CMakeLists.txt  force_generator_tests.cpp
tests/golden/: manifest.json  render_golden.py
tests/physics/: CMakeLists.txt  physics_backend_tests.cpp
tests/python/: CMakeLists.txt  README.md  physics_bindings.cpp  renderer_bindings.cpp  requirements.txt  run_tests.sh  test_analytical_solutions.py  test_physics_invariants.py  test_renderer.py
tests/reference_scenes/: README.md
tests/renderer/: CMakeLists.txt  denoise_parse_test.cpp  env_cdf_test.cpp  renderer_pipeline_tests.cpp  renderer_test.cpp  sobol_test.cpp
tests/shadow_system/: CMakeLists.txt  compile_time_tests.hpp  shadow_system_tests.cpp
(+1123 files in other folders)
